--- a/stacks/rustfs/compose.yaml
+++ b/stacks/rustfs/compose.yaml
@@ -26,7 +26,7 @@ services:
     image: rustfs/rustfs:${rustfs_version:-latest}
     labels:
       kuma.__docker:
-      kuma.__web: '"rs.${domain:?}/rustfs/console"'
+      # kuma.__web: '"rs.${domain:?}/rustfs/console"'
       kuma.rustfs_s3.port.hostname: rustfs
       kuma.rustfs_s3.port.name: port_rustfs_s3
       kuma.rustfs_s3.port.notification_name_list: '["ntfy"]'
