--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -77,7 +77,7 @@ services:
     image: ghcr.io/pocket-id/pocket-id:${pocketid_version:-v2}
     labels:
       kuma.__docker:
-      kuma.__web: '"id.${domain:?}"'
+      # kuma.__web: '"id.${domain:?}"'
       traefik.enable: "true"
       traefik.http.routers.pocketid.entryPoints: "https"
       traefik.http.routers.pocketid.rule: "Host(`id.${domain:?}`)"
@@ -106,7 +106,7 @@ services:
     image: ghcr.io/steveiliop56/tinyauth:${tinyauth_version:-v4}
     labels:
       kuma.__docker:
-      kuma.__web: '"auth.${domain:?}"'
+      # kuma.__web: '"auth.${domain:?}"'
       traefik.enable: "true"
       traefik.http.routers.tinyauth.entryPoints: "https"
       traefik.http.routers.tinyauth.rule: "Host(`auth.${domain:?}`)"
@@ -129,7 +129,7 @@ services:
     image: traefik:${traefik_version:-v3.6}
     labels:
       kuma.__docker:
-      kuma.__web: '"tf.${domain:?}"'
+      # kuma.__web: '"tf.${domain:?}"'
       traefik.enable: "true"
       traefik.http.routers.traefik.entryPoints: "https"
       traefik.http.routers.traefik.middlewares: "localonly@file"
