--- a/stacks/rxresume/compose.yaml
+++ b/stacks/rxresume/compose.yaml
@@ -45,7 +45,7 @@ services:
     image: amruthpillai/reactive-resume:${rxresume_version:-latest}
     labels:
       kuma.__docker:
-      kuma.__web: '"rx.${domain:?}"'
+      # kuma.__web: '"rx.${domain:?}"'
       traefik.enable: "true"
       traefik.http.routers.rxresume.entrypoints: "https"
       traefik.http.routers.rxresume.middlewares: "allowedIPs@file,tinyauth@file"
