update env vars

--- a/stacks/rxresume/compose.yaml
+++ b/stacks/rxresume/compose.yaml
@@ -27,11 +27,8 @@ services:
       APP_URL: rx.${domain:?}
       AUTH_SECRET: ${auth_secret:?}
       DATABASE_URL: postgresql://${db_user:-rxresume}:${db_pass:?}@rxresume_postgres:5432/${db_name:-rxresume}
-      MAIL_FROM: noreply@example.com
-      NODE_ENV: production
-      PORT: 3000
-      PUBLIC_URL: https://rx.${domain:?}
-      REFRESH_TOKEN_SECRET: ${refresh_token:?}
+      GOTENBERG_ENDPOINT: http://rxresume_gotenberg:3000
+      PRINTER_APP_URL: https://rx.${domain:?}
       STORAGE_ACCESS_KEY: ${s3_access_key:?}
       STORAGE_BUCKET: rxresume
       STORAGE_ENDPOINT: garage
