unify keydb names and settings

--- a/stacks/immich/compose.yaml
+++ b/stacks/immich/compose.yaml
@@ -44,6 +44,7 @@ services:
     cap_drop:
       - ALL
     cap_add:
+      - CHOWN
       - SETGID
       - SETUID
     container_name: immich_keydb
