--- a/stacks/utils/compose.yaml
+++ b/stacks/utils/compose.yaml
@@ -145,6 +145,7 @@ services:
     cap_drop:
       - ALL
     cap_add:
+      - CHOWN
       - SETGID
       - SETUID
     container_name: send_keydb
