--- a/stacks/paperlessngx/compose.yaml
+++ b/stacks/paperlessngx/compose.yaml
@@ -35,10 +35,8 @@ services:
       PAPERLESS_URL: https://paper.${domain:?}
       USERMAP_GID: ${gid:-1000}
       USERMAP_UID: ${uid:-1000}
-      # Tinyauth Header SSO
-      PAPERLESS_ENABLE_HTTP_REMOTE_USER: true
-      PAPERLESS_HTTP_REMOTE_USER_HEADER_NAME: HTTP_REMOTE_USER
-      PAPERLESS_LOGOUT_REDIRECT_URL: https://auth.${domain:?}/logout
+      PAPERLESS_APPS: allauth.socialaccount.providers.openid_connect
+      PAPERLESS_SOCIALACCOUNT_PROVIDERS: '{"openid_connect":{"SCOPE":["openid","profile","email"],"OAUTH_PKCE_ENABLED":true,"APPS":[{"provider_id":"pocket-id","name":"Pocket-ID","client_id":"${client_id:?}","secret":"${client_secret:?}","settings":{"server_url":"https://id.${domain:?}"}}]}}'
     depends_on:
       - paperlessngx_db
       - paperlessngx_keydb
