--- a/stacks/website/example.env
+++ b/stacks/website/example.env
@@ -16,6 +16,10 @@ homepage_version=latest
 mywebsite_version=latest
 postgres_version=16
 
+# Freshrss settings
+client_id='a_long_and_secure_secret'
+client_secret='a_long_and_secure_secret'
+
 # Postgres settings
 db_name=freshrss
 db_pass="a_secure_db_password"
