remove tinyauth middleware

--- a/stacks/website/compose.yaml
+++ b/stacks/website/compose.yaml
@@ -74,7 +74,7 @@ services:
       # kuma.__web: '"rss.${domain:?}"'
       traefik.enable: "true"
       traefik.http.routers.freshrss.entryPoints: "https"
-      traefik.http.routers.freshrss.middlewares: "allowedIPs@file,tinyauth@file"
+      traefik.http.routers.freshrss.middlewares: "allowedIPs@file"
       traefik.http.routers.freshrss.rule: "Host(`rss.${domain:?}`)"
       traefik.http.services.freshrss.loadbalancer.server.url: "http://freshrss:80"
     networks:
