--- a/stacks/utils/compose.yaml
+++ b/stacks/utils/compose.yaml
@@ -160,6 +160,10 @@ services:
     <<: *common-settings
     cap_drop:
       - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
     container_name: slink
     environment:
       IMAGE_COMPRESSION_QUALITY: 100
