--- a/stacks/rxresume/example.env
+++ b/stacks/rxresume/example.env
@@ -5,7 +5,7 @@ data=/opt/stacks/stackname
 domain=yourdomain.com
 
 # Image settings
-gotenburg_version=8
+chromium_version=8
 postgres_version=16-alpine
 rxresume_version=v5.0.0
 
@@ -18,3 +18,4 @@ db_user=rxresume
 auth_secret='a_long_and_secure_secret'
 s3_access_key='a_long_and_secure_secret'
 s3_secret_key='a_long_and_secure_secret'
+printer_token='a_long_and_secure_secret'
