--- a/stacks/rxresume/compose.yaml
+++ b/stacks/rxresume/compose.yaml
@@ -67,10 +67,10 @@ services:
       POSTGRES_USER: ${db_user:-rxresume}
       POSTGRES_PASSWORD: ${db_pass:?}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d postgres"]
       interval: 10s
-      timeout: 5s
       retries: 5
+      test: ["CMD-SHELL", "pg_isready -U postgres -d postgres"]
+      timeout: 5s
     image: postgres:${postgres_version:-16-alpine}
     labels:
       kuma.__docker:
@@ -84,16 +84,15 @@ services:
       - ALL
     container_name: rxresume_printer
     environment:
-      QUEUED: 10
-      HEALTH: true
       CONCURRENT: 5
+      HEALTH: true
+      QUEUED: 10
       TOKEN: ${printer_token:?}
     healthcheck:
-      test:
-        ["CMD", "curl", "-f", "http://localhost:3000/pressure?token=${printer_token:?}"]
       interval: 10s
-      timeout: 5s
       retries: 10
+      test: ["CMD", "curl", "-f", "http://localhost:3000/pressure?token=${printer_token:?}"]
+      timeout: 5s
     image: ghcr.io/browserless/chromium:${chromium_version:-latest}
     labels:
       kuma.__docker:
