--- a/stacks/media/example.env
+++ b/stacks/media/example.env
@@ -13,10 +13,10 @@ timezone=America/Chicago
 # Image settings
 calibre_web_version=latest
 jellyfin_version=latest
-jellyseerr_version=latest
+seerr_version=latest
 navidrome_version=latest
 
-# Jellyseerr settings
+# Seerr settings
 log_level=warn
 
 # Navidrome settings
